# ChippyBoot

./: .gitignore  CMakeLists.txt  ChippyBoot.lib
include/: chippyboot.hpp
pkg/: ChippyBoot.lib  chippyboot.h
src/: chippyboot.cpp
win_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ChippyBoot.sln  ChippyBootDll.vcxproj  ChippyBootDll.vcxproj.filters  ChippyBoota.vcxproj  ChippyBoota.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
win_build/ChippyBootDll.dir/Debug/: ChippyBoot.dll.recipe  ChippyBoot.ilk
win_build/ChippyBootDll.dir/Debug/ChippyBootDll.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
win_build/ChippyBoota.dir/Debug/ChippyBoota.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
win_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
win_build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
win_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
win_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
